Fix video/signal loading

--- a/templates/index.html
+++ b/templates/index.html
@@ -280,7 +280,7 @@
       <h5 class="">Video Name:</h5>
     </div>
     <div class="col-2">
-      <h5 id="Set_out_video_name" name="video_name" class="fill_in"></h5>
+      <h5 id="Set_out_video_path" name="video_path" class="fill_in"></h5>
     </div>
 
   </div>
